# repo2ai

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example_output.md  pyproject.toml
.github/: dependabot.yml  markdown-link-check.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md
docs/architecture/c4/: 01-system-context.puml  02-class-module-diagram.puml  02-container-diagram.puml  03-component-diagram.puml  04-dev-workflow.puml
docs/plans/: 2025-12-17-scoped-filtering.md  2025-12-18-pr-review.md
src/repo2ai/: cli.py  core.py  pr.py
src/repo2md/: __init__.py  browser.py  cli.py  core.py  output.py
src/repo_to_markdown/: __init__.py  cli.py  core.py  output.py
tests/: test_browser.py  test_cli.py  test_core.py  test_output.py  test_pr.py  test_scope.py
