[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2markdown"
version = "0.1.0"
description = "Export Git repository contents to structured Markdown"
authors = [
    {name = "Georg Hildebrand"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyperclip>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.16.1",
    "types-pyperclip>=1.9.0"
]

[project.scripts]
repo2md = "repo_to_markdown.cli:main"

[project.urls]
Homepage = "https://github.com/georghildebrand/Repo2Markdown"
Repository = "https://github.com/georghildebrand/Repo2Markdown"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 180
target-version = ['py38']