[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "repo2markdown"
version = "0.1.0"
description = "Export Git repository contents to structured Markdown"
authors = ["Georg Hildebrand"]
readme = "README.md"
license = "MIT"
packages = [{include = "repo_to_markdown", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^6.2"
black = "^22.0"
flake8 = "^4.0"
mypy = "^1.16.1"
types-pyperclip = "^1.9.0"

[tool.poetry.scripts]
repo2md = "repo_to_markdown.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/georghildebrand/Repo2Markdown"
Repository = "https://github.com/georghildebrand/Repo2Markdown"

[tool.black]
line-length = 180
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
